--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories {
 	mavenCentral()
 }
 
+// gradle 빌드 시 JAR파일이 2개 생성된는 것 설정
+jar {
+	enabled=false
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
