--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,15 +2,10 @@ name: Java CI with Gradle
 
 # 워크플로가 시작될 조건 지정
 # 언제 이 파일의 내용이 실행될 것인지 정의
-# 여기서 main 브랜치에 코드 push되거나 pull_request되었을 때 실행할 것을 말함.
+# main 브랜치 코드가 푸쉬 될때만 실행됨
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    types:
-    - closed
-    branches: [ "main" ]
-
 
 # 코드의 내용을 이 파일을 실행하여 action을 수행하는 주체(Github actions에서 사용하는 VM)가 읽을 수 있도록 허용한다는 의미
 permissions:
