--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ jar {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -45,14 +47,10 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
     //********************* docker java api 의존성 추가 **********************
-    implementation 'com.github.docker-java:docker-java:3.3.4'
-    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.4'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
-    implementation 'org.apache.httpcomponents.core5:httpcore5:5.0.2'
-    implementation 'org.apache.httpcomponents.core5:httpcore5-h2:5.0.2'
+    implementation 'com.github.docker-java:docker-java-core:3.2.14'
+	implementation 'com.github.docker-java:docker-java-transport-okhttp:3.2.14'
     //*********************************************************************
-
+	testImplementation 'org.mockito:mockito-core:3.11.2'
 }
 
 tasks.named('test') {
